# bikespace

./: .dockerignore  .gitignore  AGENTS.md  DELETE_LATER_Docker_Notes.md  LICENSE  Makefile  Pipfile  Procfile  README.md  compose-dev.yaml  compose-test.yaml  docker-compose-dev.yml  docker-compose.yaml  fly.toml  manage.py  package-lock.json  package.json  requirements.txt
archive/: README.md  index.html
datasets/analysis-for-city/: BikeSpace Data Notes and Cleanup - Data.csv  README.md  bikespace-analysis-for-city.ipynb  damage_bikespace_city_matches.xlsx  generate_damage_report.py  pyproject.toml
datasets/analysis-for-city/references/: BikeSpace Data Notes and Cleanup - Data.csv  open_toronto_ca_sources.json
datasets/analysis-for-city/reports/2024-08-22/: damage_bikespace_city_matches_2024-08-22.xlsx
datasets/analysis-for-city/reports/2024-10-29/: damage_bikespace_city_matches_2024-10-29.xlsx
datasets/analysis-for-city/src/: generate_damage_report.py  test_api_date_parse.py  test_filter_by_date.py  test_resize_image.py
datasets/analysis-for-city/src/analysis_for_city/: generate_damage_report.py
datasets/analysis-for-city/tests/: test_api_date_parse.py  test_filter_by_date.py  test_resize_image.py
datasets/data_stories/apartments/: README.md  apartments_bicycle_parking.csv  apartments_bicycle_parking.geojson  apartments_bicycle_parking.xlsx  apartments_bicycle_parking_filtered.geojson  pyproject.toml
datasets/data_stories/apartments/address_cache/: address_cache.json
datasets/data_stories/apartments/source_data/: Toronto_Bicycle_Policy_Zones.geojson
(+2120 files in other folders)
